Add functions in server GUI Add AI enum table Add some missing functions

--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
             "lfs",
             "io",
             "os",
-            "mist"
+            "mist",
+            "log"
         ]
     }
 }
