Add more trigger words. Add Controller:hasTask. Add function net.load_mission, net.load_next_mission, net.get_stat, net.send_chat, net.send_chat_to Add id_ field for all object Add Unit:enableEmission, Unit:getDescentCapacity, Unit:getNearestCargos

--- a/config.json
+++ b/config.json
@@ -2,9 +2,12 @@
     "$schema": "https://raw.githubusercontent.com/LuaLS/LLS-Addons/main/schemas/addon_config.schema.json",
     "name": "DCS World",
     "words": [
+        "onEvent",
+        "world%.addEventHandler",
         "Unit%.getByName",
         "Group%.getByName",
-        "trigger%.action%."
+        "trigger%.action",
+        "trigger%.misc"
     ],
     "files": [
         "mist_.+%.lua",
